[CHANGED] maximize NutsPath usage in the API